# collatz-divisibility-test

./: LICENSE  README.md  pyproject.toml  requirements.txt
workspace/: demo.ipynb  divtest.py
