[project]
name = "collatz-divisibility-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mahfoud-202", email = "166753586+mahfoud-202@users.noreply.github.com"},
]
dependencies = ["jupyterlab>=4.3.4"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
optional = [
    "black>=24.10.0",
]
[tool.pdm]
distribution = false
